service-external.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: basesdedatosezproxyendeporte
  namespace: app
spec:
  hosts:
  - syscomer-net.endeporte.basesdedatosezproxy.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
